--- a/index.html
+++ b/index.html
@@ -369,6 +369,14 @@
 
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
+				<!-- проба форми -->
+				<!-- <form>
+					<input class="persona" />
+					<input class="phone" />
+					<input class="mail" />
+					<textarea></textarea>
+				</form> -->
+					<!-- проба форми -->
 				<button type="button" class="modal-close-btn" data-modal-close>
 					<svg class="model-close-btn-icon" width="8" height="8"><use href="./image/icons.svg#icon-closer"></use></svg>
 				</button>
