--- a/index.html
+++ b/index.html
@@ -127,28 +127,28 @@
 								<ul class="social-member-list">
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-instagram_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-twitter_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-facebook_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-linkedin_icon"></use>
 											</svg>
 										</a>
@@ -164,28 +164,28 @@
 								<ul class="social-member-list">
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-instagram_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-twitter_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-facebook_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-linkedin_icon"></use>
 											</svg>
 										</a>
@@ -201,28 +201,28 @@
 								<ul class="social-member-list">
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-instagram_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-twitter_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-facebook_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-linkedin_icon"></use>
 											</svg>
 										</a>
@@ -238,28 +238,28 @@
 								<ul class="social-member-list">
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-instagram_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-twitter_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-facebook_icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social-member-item">
 										<a href="#" class="social-member-link">
-											<svg class="social-list-icon" widht="16px" height="16">
+											<svg class="social-list-icon" width="16px" height="16px">
 												<use href="./image/icons.svg#icon-linkedin_icon"></use>
 											</svg>
 										</a>
@@ -283,35 +283,35 @@
 						</li>
 						<li class="customers-item">
 							<a href="#" class="customers-link">
-								<svg class="customers-logo" width="104" height="56">
+								<svg class="customers-logo" width="104px" height="56px">
 									<use href="./image/icons.svg#icon-Logo_taglinehere"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customers-item">
 							<a href="#" class="customers-link">
-								<svg class="customers-logo" width="104" height="56">
+								<svg class="customers-logo" width="104px" height="56px">
 									<use href="./image/icons.svg#icon-Logo_company"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customers-item">
 							<a href="#" class="customers-link">
-								<svg class="customers-logo" width="104" height="56">
+								<svg class="customers-logo" width="104px" height="56px">
 									<use href="./image/icons.svg#icon-Logo_fosterpeters"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customers-item">
 							<a href="#" class="customers-link">
-								<svg class="customers-logo" width="104" height="56">
+								<svg class="customers-logo" width="104px" height="56px">
 									<use href="./image/icons.svg#icon-Logo_brand"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customers-item">
 							<a href="#" class="customers-link">
-								<svg class="customers-logo" width="104" height="56">
+								<svg class="customers-logo" width="104px" height="56px">
 									<use href="./image/icons.svg#icon-Logo_tagline"></use>
 								</svg>
 							</a>
@@ -336,28 +336,28 @@
 					<ul class="fotter-media-list">
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24px" height="24px">
 									<use href="./image/icons.svg#icon-instagram_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24px" height="24px">
 									<use href="./image/icons.svg#icon-twitter_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24px" height="24px">
 									<use href="./image/icons.svg#icon-facebook_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24px" height="24px">
 									<use href="./image/icons.svg#icon-linkedin_icon"></use>
 								</svg>
 							</a>
@@ -366,20 +366,62 @@
 				</div>
 			</div>
 		</footer>
-
-		<div class="backdrop is-hidden" data-modal>
+		<!-- добавить is-hidden после бекдропа в конце работы -->
+		<div class="backdrop" data-modal>
 			<div class="modal">
-				<!-- проба форми -->
-				<!-- <form>
-					<input class="persona" />
-					<input class="phone" />
-					<input class="mail" />
-					<textarea></textarea>
-				</form> -->
-					<!-- проба форми -->
 				<button type="button" class="modal-close-btn" data-modal-close>
-					<svg class="model-close-btn-icon" width="8" height="8"><use href="./image/icons.svg#icon-closer"></use></svg>
+					<svg class="model-close-btn-icon" width="8px" height="8px"><use href="./image/icons.svg#icon-closer"></use></svg>
 				</button>
+				<p class="modal-window-title">Leave your contacts and we will call you back</p>
+				<form class="contact-form">
+					<label class="label-contact-form">
+						<span class="lable-text">Name</span>
+						<span class="form-input-wrapper">
+							<input
+								class="contact_form_input"
+								type="text"
+								name="name"
+								required
+								pattern="^[a-zA-Zа-яА-Я]+"
+								minlength="2"
+							/>
+							<svg class="input-form-icon" width="12px" height="12px">
+								<use href="./image/icons.svg#icon-person-icon"></use>
+							</svg>
+						</span>
+					</label>
+					<label class="label-contact-form">
+						<span class="lable-text">Phone</span>
+						<span class="form-input-wrapper">
+						<input
+							class="contact_form_input"
+							type="tel"
+							name="phone_number"
+							required
+							pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+							title="xxx-xxx-xx-xx"
+						/>
+						<svg class="input-form-icon" width="13px" height="13px"><use href="./image/icons.svg#icon-phone-icon"></use></svg>
+						</span>
+					</label>
+					<label class="label-contact-form">
+						<span class="lable-text">Email</span>
+						<span class="form-input-wrapper">
+						<input class="contact_form_input" type="email" name="email" />
+						<svg class="input-form-icon" width="15px" height="12px"><use href="./image/icons.svg#icon-mail-icon"></use></svg>
+						</span>
+					</label>
+					<label class="label-contact-form">
+						<span class="lable-text text-area">Comment</span>
+						<textarea class="modal-textarea-form" name="user-message" placeholder="Text input"></textarea>
+					</label>
+					<input id="user-policy" type="checkbox" name="user-policy" class="check-form" />
+					<label for="user-policy" class="checkbox-form">
+						I accept the terms and conditions of the
+						<a href="#">Privacy Policy</a>
+					</label>
+					<button type="submit" class="modal-form-submit">Send</button>
+				</form>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
