--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 						<span class="lable-text text-area">Comment</span>
 						<textarea class="modal-textarea-form" name="user-message" placeholder="Text input"></textarea>
 					</label>
-					<input id="user-policy" type="checkbox" name="user-policy" class="check-form" />
+					<input id="user-policy" type="checkbox" name="user-policy" class="check-form visually-hidden" />
 					<label for="user-policy" class="checkbox-form">
 						I accept the terms and conditions of the
 						<a href="#">Privacy Policy</a>
