--- a/index.html
+++ b/index.html
@@ -364,13 +364,26 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-subscribe-container">
+					<p class="subscribe-title">Subscribe</p>
+					<form class="footer-subscribe-form">
+						<input class="mail-input-subscribe" type="email" name="subsribe-email" placeholder="E-mail" />
+						<button class="footer-subscribe-btn">
+							Subscribe
+							<svg class="subscribe-icon" width="24px" height="20px">
+								<use href="./image/icons.svg#icon-icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
-		<!-- добавить is-hidden после бекдропа в конце работы -->
-		<div class="backdrop" data-modal>
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="modal-close-btn" data-modal-close>
-					<svg class="model-close-btn-icon" width="8px" height="8px"><use href="./image/icons.svg#icon-closer"></use></svg>
+					<svg class="model-close-btn-icon" width="8px" height="8px">
+						<use href="./image/icons.svg#icon-closer"></use>
+					</svg>
 				</button>
 				<p class="modal-window-title">Leave your contacts and we will call you back</p>
 				<form class="contact-form">
@@ -393,22 +406,26 @@
 					<label class="label-contact-form">
 						<span class="lable-text">Phone</span>
 						<span class="form-input-wrapper">
-						<input
-							class="contact_form_input"
-							type="tel"
-							name="phone_number"
-							required
-							pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-							title="xxx-xxx-xx-xx"
-						/>
-						<svg class="input-form-icon" width="13px" height="13px"><use href="./image/icons.svg#icon-phone-icon"></use></svg>
+							<input
+								class="contact_form_input"
+								type="tel"
+								name="phone_number"
+								required
+								pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+								title="xxx-xxx-xx-xx"
+							/>
+							<svg class="input-form-icon" width="13px" height="13px">
+								<use href="./image/icons.svg#icon-phone-icon"></use>
+							</svg>
 						</span>
 					</label>
 					<label class="label-contact-form">
 						<span class="lable-text">Email</span>
 						<span class="form-input-wrapper">
-						<input class="contact_form_input" type="email" name="email" />
-						<svg class="input-form-icon" width="15px" height="12px"><use href="./image/icons.svg#icon-mail-icon"></use></svg>
+							<input class="contact_form_input" type="email" name="email" />
+							<svg class="input-form-icon" width="15px" height="12px">
+								<use href="./image/icons.svg#icon-mail-icon"></use>
+							</svg>
 						</span>
 					</label>
 					<label class="label-contact-form">
@@ -417,8 +434,8 @@
 					</label>
 					<input id="user-policy" type="checkbox" name="user-policy" class="check-form visually-hidden" />
 					<label for="user-policy" class="checkbox-form">
-						I accept the terms and conditions of the
-						<a href="#">Privacy Policy</a>
+						I accept the terms and conditions of the&nbsp;
+						<a class="privacy-policy-link" href="#">Privacy Policy</a>
 					</label>
 					<button type="submit" class="modal-form-submit">Send</button>
 				</form>
