--- a/portfolio.html
+++ b/portfolio.html
@@ -240,33 +240,45 @@
 					<ul class="fotter-media-list">
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24" height="24">
 									<use href="./image/icons.svg#icon-instagram_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24" height="24">
 									<use href="./image/icons.svg#icon-twitter_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24" height="24">
 									<use href="./image/icons.svg#icon-facebook_icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="fotter-media-item">
 							<a class="fotter-media-link" href="#">
-								<svg class="fotter-media-icon" weight="24" height="24">
+								<svg class="fotter-media-icon" width="24" height="24">
 									<use href="./image/icons.svg#icon-linkedin_icon"></use>
 								</svg>
 							</a>
 						</li>
 					</ul>
+				</div>
+				<div class="footer-subscribe-container">
+					<p class="subscribe-title">Subscribe</p>
+					<form class="footer-subscribe-form">
+						<input class="mail-input-subscribe" type="email" name="email" placeholder="E-mail" />
+						<button type="submit" class="footer-subscribe-btn">
+							Subscribe
+							<svg class="subscribe-icon" width="24px" height="20px">
+								<use href="./image/icons.svg#icon-icon-send"></use>
+							</svg>
+						</button>
+					</form>
 				</div>
 			</div>
 		</footer>
