--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 					<p class="subscribe-title">Subscribe</p>
 					<form class="footer-subscribe-form">
 						<input class="mail-input-subscribe" type="email" name="subsribe-email" placeholder="E-mail" />
-						<button class="footer-subscribe-btn">
+						<button class="footer-subscribe-btn" type="submit">
 							Subscribe
 							<svg class="subscribe-icon" width="24px" height="20px">
 								<use href="./image/icons.svg#icon-icon-send"></use>
@@ -432,7 +432,7 @@
 						<span class="lable-text text-area">Comment</span>
 						<textarea class="modal-textarea-form" name="user-message" placeholder="Text input"></textarea>
 					</label>
-					<input id="user-policy" type="checkbox" name="user-policy" class="check-form visually-hidden" />
+					<input id="user-policy" type="checkbox" name="user-policy" value="accept" class="check-form visually-hidden" />
 					<label for="user-policy" class="checkbox-form">
 						I accept the terms and conditions of the&nbsp;
 						<a class="privacy-policy-link" href="#">Privacy Policy</a>
