finaly update after examination

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 							</svg>
 						</span>
 					</label>
-					<label class="label-contact-form">
+					<label class="label-contact-form label-text-area">
 						<span class="lable-text text-area">Comment</span>
 						<textarea class="modal-textarea-form" name="user-message" placeholder="Text input"></textarea>
 					</label>
