--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 			</div>
 		</header>
 		<main>
-			<section class="main-banner banner-bgimage">
+			<!-- <section class="main-banner banner-bgimage">
 				<div class="container">
 					<h1 class="main-banner-slogan">Effective Solutions for Your Business</h1>
 					<button class="main-banner-btn" type="button" data-modal-open>Order Service</button>
 				</div>
-			</section>
-			<section class="section-features section">
+			</section> -->
+			<!-- <section class="section-features section">
 				<div class="container">
 					<h2 class="visually-hidden">Features</h2>
 					<ul class="features-list">
@@ -98,8 +98,8 @@
 						</li>
 					</ul>
 				</div>
-			</section>
-			<section class="section-activities section">
+			</section> -->
+			<!-- <section class="section-activities section">
 				<div class="container">
 					<h2 class="activities-title">What Are We Doing</h2>
 					<ul class="activities-list">
@@ -114,8 +114,8 @@
 						</li>
 					</ul>
 				</div>
-			</section>
-			<section class="section-team section">
+			</section> -->
+			<!-- <section class="section-team section">
 				<div class="container">
 					<h2 class="team-title">Our Team</h2>
 					<ul class="team-list">
@@ -269,8 +269,8 @@
 						</li>
 					</ul>
 				</div>
-			</section>
-			<section class="section-customers section">
+			</section> -->
+			<!-- <section class="section-customers section">
 				<div class="container">
 					<h2 class="customers-title">Customers</h2>
 					<ul class="customers-list">
@@ -318,9 +318,9 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 		</main>
-		<footer class="footer">
+		<!-- <footer class="footer">
 			<div class="footer-container container">
 				<div class="fotter-logo-container">
 					<a href="index.html" class="fotter-logo">
@@ -377,7 +377,7 @@
 					</form>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="modal-close-btn" data-modal-close>
